--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 body {
     font-family: 'Open Sans', sans-serif;
     -webkit-font-smoothing: antialiased;
+    min-width: 1024px;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -62,10 +63,13 @@ hr {
 /* Header */
 
 header {
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(0, 0, 0, 0.5);
     height: 80px;
     margin-bottom: 15px;
     border-bottom: 1px solid #000;
+    width: 100%;
+    /*min-width: 940px;*/
+    position: fixed;
 }
 
 header .logo h1 {
@@ -123,6 +127,7 @@ header .navigation a:hover {
     font-size: 45px;
     font-weight: 400 !important;
     color: #555;
+    text-align: center;
 }
 
 .features .feature-title p {
@@ -132,51 +137,10 @@ header .navigation a:hover {
     color: #555;
     font-family: 'Droid Serif', serif;
     font-style: italic;
-    max-width: 700px;
-    margin: 0px auto;
-    margin-bottom: 20px;
-}
+    max-width: 940px;
+    margin: 0px auto 20px;
+    text-align: justify;
 
-.features hr {
-    margin-top: 25px;
-    margin-bottom: 35px;
-}
-
-.features .feat {
-    text-align: center;
-    color: #888;
-    -webkit-transition: color 1s ease;
-    -moz-transition: color 1s ease;
-    -o-transition: color 1s ease;
-    -ms-transition: color 1s ease;
-    transition: color 1s ease;
-    cursor: pointer;
-}
-
-.features .feat:hover {
-    color: #444;
-    -webkit-transition: color 1s ease;
-    -moz-transition: color 1s ease;
-    -o-transition: color 1s ease;
-    -ms-transition: color 1s ease;
-    transition: color 1s ease;
-}
-
-.features .feat i {
-    font-size: 30px;
-}
-
-.features .feat h4 {
-    color: #666;
-    font-weight: 400 !important;
-}
-
-.features .feat p {
-    font-size: 14px;
-    line-height: 28px;
-    font-weight: normal;
-    font-style: italic;
-    font-family: 'Droid Serif', serif;
 }
 
 /* Features */
@@ -186,6 +150,8 @@ header .navigation a:hover {
 .shots {
     padding-top: 60px;
     padding-bottom: 60px;
+    max-width: 940px;
+    margin: 0px auto 20px;
 }
 
 .shots .screenshot img {
@@ -194,7 +160,11 @@ header .navigation a:hover {
 }
 
 .shots .shotcontent h3 {
+    font-family: 'Lobster Two', cursive;
     font-size: 35px;
+    font-weight: 400 !important;
+    color: #555;
+    text-align: center;
     border-bottom: 1px solid #eee;
     padding-bottom: 15px;
     margin-bottom: 15px;
@@ -224,39 +194,20 @@ header .navigation a:hover {
     line-height: 28px !important;
 }
 
-.shots .shotcontent a.download {
-    color: #fff;
-    display: inline-block;
-    text-decoration: none;
-    font-size: 17px;
-    font-weight: bold;
-    padding: 0px 25px;
-    border-radius: 5px;
-    background: #39a5e2;
-    line-height: 50px;
-    box-shadow: 0 2px 0 0 rgba(255, 255, 255, 0.2) inset, 0 2px 3px rgba(0, 0, 0, 0.3);
-    -webkit-transition: background 1s ease;
-    -moz-transition: background 1s ease;
-    -o-transition: background 1s ease;
-    -ms-transition: background 1s ease;
-    transition: background 1s ease;
-}
-
-.shots .shotcontent a.download:hover {
-    background: #1c97dd;
-    -webkit-transition: background 1s ease;
-    -moz-transition: background 1s ease;
-    -o-transition: background 1s ease;
-    -ms-transition: background 1s ease;
-    transition: background 1s ease;
-}
-
 /* Footer */
 
 footer {
     padding-top: 30px;
     background: #000 url('../img/3.png') repeat;
     color: #ccc;
+}
+
+footer p {
+    font-size: 16px;
+    font-style: italic;
+    font-family: 'Droid Serif', serif;
+    font-weight: normal;
+    line-height: 35px;
 }
 
 footer a {
@@ -268,30 +219,45 @@ footer a:hover {
     color: #eee;
 }
 
-footer hr {
-    margin-top: 30px;
-    margin-bottom: 30px;
-    border-top: #101010 1px solid;
-    border-bottom: #222 1px solid;
-}
-
-footer .footer-link {
-    padding-top: 15px;
-}
-
-footer .footer-link h5 {
+footer h3 {
+    font-family: 'Lobster Two', cursive;
+    font-size: 35px;
+    font-weight: 400 !important;
     color: #fff;
-    font-size: 18px;
+    text-align: center;
 }
 
-footer .footer-link a {
-    margin-bottom: 10px;
-    display: inline-block;
+#aboutus {
+    max-width: 940px;
+    margin: 0px auto;
 }
 
-footer .copy {
-    margin-bottom: 20px;
-    font-size: 13px;
+#sajith, #vimuth, #tharindu, #mihil {
+
+    -webkit-border-radius: 999px;
+    -moz-border-radius: 999px;
+    border-radius: 999px;
+    width: 150px;
+    height: 150px;
+    /*display: block;*/
+    float: left;
+    margin: 30px;
+}
+
+#sajith {
+    background: url('../img/sajith.jpg');
+}
+
+#vimuth {
+    background: url('../img/vimuth.jpg');
+}
+
+#tharindu {
+    background: url('../img/tharindu.jpg');
+}
+
+#mihil {
+    background: url('../img/mihil.jpg');
 }
 
 .ajax-loader {
@@ -317,8 +283,11 @@ footer .copy {
     max-width: 300px;
     float: left;
     margin-left: 30px;
+    font-size: 12px;
+    font-style: italic;
+    font-family: 'Droid Serif', serif;
+    text-align: left;
 }
-
 
 /* chess board */
 .black, .white, .black-queen, .white-queen {
@@ -349,14 +318,14 @@ footer .copy {
 
 #chess-board-container {
     text-align: center;
-    padding: 50px 0;
+    padding: 120px 0 50px;
+
 }
 
 #p-chess {
     float: left;
     padding: 30px 30px;
 }
-
 
 #chess-board {
 
