--- a/css/style.css
+++ b/css/style.css
@@ -150,8 +150,8 @@ header .navigation a:hover {
     margin: 0 auto 20px;
 }
 
-.shots .screenshot img {
-    width: 300px;
+#sample-img {
+    text-align: center;
     margin: 0 auto;
 }
 
@@ -172,6 +172,8 @@ header .navigation a:hover {
     font-family: 'Droid Serif', serif;
     font-weight: normal;
     line-height: 35px;
+    text-align: justify;
+    padding-bottom: 10px;
 }
 
 .shots hr {
@@ -227,10 +229,19 @@ footer h3 {
     /*display: block;*/
     float: left;
     margin: 30px;
+    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */
+    filter: gray; /* IE6-9 */
+    -webkit-filter: grayscale(100%);
 }
 
 #sajith {
     background: url('../img/sajith.jpg');
+}
+
+#sajith:hover, #vimuth:hover, #tharindu:hover, #mihil:hover {
+    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'1 0 0 0 0, 0 1 0 0 0, 0 0 1 0 0, 0 0 0 1 0\'/></filter></svg>#grayscale");
+    -webkit-filter: grayscale(0%);
+    cursor: pointer;
 }
 
 #vimuth {
