--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 
 body {
     -webkit-font-smoothing: antialiased;
-    min-width: 1024px;
+    min-width: 1100px;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -41,7 +41,7 @@ hr {
 /* Basic CSS ends */
 
 .container {
-    width: auto;
+    width: 1100px;
 }
 
 .tblue {
@@ -120,12 +120,26 @@ header .navigation a:hover {
     border-bottom: 1px solid #ddd;
 }
 
-.features .feature-title h3 {
+.feature-title {
+    padding-top: 30px;
+}
+
+.features .feature-title h3, .features .feature-title h5 {
     font-family: 'Lobster Two', cursive;
-    font-size: 45px;
     font-weight: 400 !important;
     color: #555;
     text-align: center;
+}
+
+.features .feature-title h3 {
+    font-size: 45px;
+}
+
+.features .feature-title h5 {
+    font-size: 24px;
+    max-width: 800px;
+    margin: 0 auto;
+    padding-bottom: 15px;
 }
 
 .features .feature-title p {
@@ -135,7 +149,6 @@ header .navigation a:hover {
     color: #555;
     font-family: 'Droid Serif', serif;
     font-style: italic;
-    max-width: 940px;
     margin: 0 auto 20px;
     text-align: justify;
 
@@ -144,15 +157,19 @@ header .navigation a:hover {
 /* Shots */
 
 .shots {
-    padding-top: 60px;
     padding-bottom: 60px;
-    max-width: 940px;
     margin: 0 auto 20px;
 }
 
 #sample-img {
-    text-align: center;
-    margin: 0 auto;
+    /*vertical-align:middle;*/
+    /*padding: 0 auto;*/
+    display: inline-block;
+    margin-left: 25%;
+}
+
+.shots .shotcontent {
+    padding-top: 60px;
 }
 
 .shots .shotcontent h3 {
