--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,6 @@
     as published by Sam Hocevar. See http://www.wtfpl.net/ for more details.
 */
 
-
 /* Basic CSS starts */
 
 body {
@@ -13,7 +12,6 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-
 }
 
 p {
@@ -22,7 +20,6 @@ p {
 }
 
 a {
-
 }
 
 a:hover {
@@ -58,7 +55,6 @@ hr {
 .top {
     background: #555 url('../img/back.jpg') repeat;
     border-bottom: 1px solid #000;
-
 }
 
 .inner-page {
@@ -131,7 +127,8 @@ header .navigation a:hover {
     padding-top: 30px;
 }
 
-.features .feature-title h3, .features .feature-title h5 {
+.features .feature-title h3,
+.features .feature-title h5 {
     font-family: 'Lobster Two', cursive;
     font-weight: 400 !important;
     color: #555;
@@ -243,29 +240,33 @@ footer h3 {
     margin: 0 auto;
 }
 
-#sajith, #vimuth, #tharindu, #mihil {
-
+#sajith,
+#vimuth,
+#tharindu,
+#mihil {
     -webkit-border-radius: 999px;
     -moz-border-radius: 999px;
     border-radius: 999px;
     width: 150px;
     height: 150px;
-    /*display: block;*/
     float: left;
     margin: 30px;
-    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */
-    filter: gray; /* IE6-9 */
+    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
+    filter: gray;
     -webkit-filter: grayscale(100%);
+}
+
+#sajith:hover,
+#vimuth:hover,
+#tharindu:hover,
+#mihil:hover {
+    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'1 0 0 0 0, 0 1 0 0 0, 0 0 1 0 0, 0 0 0 1 0\'/></filter></svg>#grayscale");
+    -webkit-filter: grayscale(0%);
+    cursor: pointer;
 }
 
 #sajith {
     background: url('../img/sajith.jpg');
-}
-
-#sajith:hover, #vimuth:hover, #tharindu:hover, #mihil:hover {
-    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'1 0 0 0 0, 0 1 0 0 0, 0 0 1 0 0, 0 0 0 1 0\'/></filter></svg>#grayscale");
-    -webkit-filter: grayscale(0%);
-    cursor: pointer;
 }
 
 #vimuth {
@@ -315,7 +316,10 @@ footer h3 {
 
 /* chess board */
 
-.black, .white, .black-queen, .white-queen {
+.black,
+.white,
+.black-queen,
+.white-queen {
     width: 50px;
     height: 50px;
     float: left;
@@ -345,20 +349,21 @@ footer h3 {
     text-align: center;
     padding: 120px 0 50px;
     display: none;
-
 }
 
 #p-chess {
     float: left;
     padding: 30px 30px;
 }
-#nojs-div{
+
+#nojs-div {
     height: 250px;
     width: 100%;
     display: inline-block;
     text-align: center;
 }
-#nojs-div p{
+
+#nojs-div p {
     padding-top: 150px;
     padding-bottom: 50px;
     font-size: 16px;
@@ -368,6 +373,7 @@ footer h3 {
     line-height: 35px;
     text-align: center;
 }
+
 #chess-board {
     background-color: rgba(0, 0, 0, 0.4);
     display: inline-block;
